--- a/Spice/Views/Shared/_Layout.cshtml
+++ b/Spice/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                 <a class="dropdown-item" asp-action="Index" asp-controller="Category" asp-area="Admin">Category</a>
-                                <a class="dropdown-item">Sub-category</a>
+                                <a class="dropdown-item" asp-action="Index" asp-controller="SubCategory" asp-area="Admin">Sub-category</a>
                                 <a class="dropdown-item">Menu Item</a>
                                 <a class="dropdown-item">Coupon</a>
                                 <a class="dropdown-item">Users</a>
